@@ -174,6 +174,7 @@
 "WebHistorySavedNotification"
 "WebIconDatabaseDidAddIconNotification"
 "WebIconDatabaseDirectoryDefaultsKey"
+"WebIconDatabaseEnabled"
 "WebIconDatabaseVersion"
 "WebIconNotificationUserInfoURLKey"
 "WebIconURLToSiteURLs"
@@ -388,6 +389,8 @@ Plugins.subproj/WebPluginDocumentView.m:"type"
 WebCoreSupport.subproj/WebBridge.m:"height"
 WebCoreSupport.subproj/WebBridge.m:"width"
 WebCoreSupport.subproj/WebCookieAdapter.m:"Cookie"
+WebCoreSupport.subproj/WebImageData.m:"Gray"
+WebCoreSupport.subproj/WebImageData.m:"RGB"
 WebCoreSupport.subproj/WebImageRendererFactory.m:"clear"
 WebCoreSupport.subproj/WebImageRendererFactory.m:"copy"
 WebCoreSupport.subproj/WebImageRendererFactory.m:"darker"
